--- a/Audit3/my-app/package.json
+++ b/Audit3/my-app/package.json
@@ -14,8 +14,12 @@
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
     "axios": "^1.4.0",
+    "bootstrap": "^5.3.1",
     "formik": "^2.4.3",
+    "mobx": "^6.10.0",
+    "mobx-react": "^9.0.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^4.0.10",
     "react-router-dom": "^6.14.2",
