--- a/Audit3/my-app/package.json
+++ b/Audit3/my-app/package.json
@@ -13,6 +13,7 @@
     "@types/node": "^16.18.38",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
+    "@types/react-redux": "^7.1.25",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.1",
     "formik": "^2.4.3",
@@ -22,8 +23,11 @@
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^4.0.10",
+    "react-redux": "^8.1.2",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.1",
+    "redux-saga": "^1.2.3",
     "styled-components": "^6.0.4",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
